# Translator

./: .gitignore  CMakeLists.txt  README.md
inc/: DeepSeekTranslator.h  HunyuanTranslator.h  ITranslator.h  SpeechEngine.h  Translator.h  audio_capture.h
src/: DeepSeekTranslator.cpp  HunyuanTranslator.cpp  SpeechEngine.cpp  Translator.cpp  audio_capture.cpp  main.cpp  miniaudio_impl.cpp
